tests/e2e/secondary-networks/cross-node/04-loadbalancer.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: test-secondary-network-lb
  annotations:
    networking.gke.io/network: vlan-456
spec:
  type: LoadBalancer
  selector:
    app: test-secondary-network-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
